# headroom

./: .gitignore  CLAUDE.md  LICENSE  README.md  headroom-project.md  pyproject.toml
HeadroomApp/Headroom/: ContentView.swift  HeadroomApp.swift
HeadroomApp/Headroom/Assets.xcassets/AccentColor.colorset/: Contents.json
HeadroomApp/Headroom/LaunchAgents/: co.dgrlabs.headroom.collector.plist
HeadroomApp/Headroom/Models/: CollectorManager.swift  HeadroomDatabase.swift  Models.swift
HeadroomApp/Headroom/Views/: DashboardView.swift  GradientStyles.swift  MetricGaugeView.swift  OnboardingView.swift  ProcessesView.swift  RecommendationView.swift  TimelineView.swift
HeadroomApp/HeadroomApp.xcodeproj/: project.pbxproj
HeadroomApp/HeadroomApp.xcodeproj/xcuserdata/cwood.xcuserdatad/xcschemes/: xcschememanagement.plist
HeadroomApp/HeadroomCollector/: main.swift
HeadroomApp/HeadroomHelper/: MetricsCollector.swift  ProcessSnapshot.swift  SMCReader.swift
HeadroomApp/Shared/: CollectionEngine.swift  DatabaseSchema.swift  Log.swift
headroom/: analyzer.py  cli.py  collector.py  constants.py  db.py  installer.py  sources.py
